test/TestSuite/Syntax/Errors/junk_after_cut.tjp
project test "Test" "1.0" 2007-08-19 +2m 

# MARK: error 4 junk_after_cut
task t -8<- ->8- {
  start 2007-08-19
}
